--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -1253,9 +1253,9 @@
         var languageValueBeforeChange;
         document.getElementById("language" + currentLang.toUpperCase()).classList.add('active-button');
 
-         document.getElementById("strongAuthenticationAppCode_label").innerHTML = "{{localizationObj." + localizationObj.strongAuthenticationAppCode_label + "}}";
+         document.getElementById("strongAuthenticationAppCode_label").innerText  = "{{localizationObj." + localizationObj.strongAuthenticationAppCode_label + "}}";
          document.getElementById("strongAuthenticationAppCode").placeholder = "{{localizationObj." + localizationObj.strongAuthenticationAppCode + "}}";
-         document.getElementById("continue").innerHTML = "{{localizationObj." + localizationObj.continue + "}}";
+         document.querySelector('#continue').innerHTML = "{{localizationObj." + localizationObj.continue + "}}";
          document.getElementById("claimVerificationServerError").innerHTML = "{{localizationObj." + localizationObj.claimVerificationServerError + "}}";
          document.getElementsByClassName("itemLevel")[0].innerHTML= "{{localizationObj." + localizationObj.itemLevel + "}}";
          
@@ -1278,6 +1278,7 @@
                     if (element) {
                         if (element.nodeName === "INPUT") {
                             element.placeholder = currentLangLocalizationObj[id];
+
                         } else {
                             var replaceString;
                             var replacedString = currentLangLocalizationObj[id];
