--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -1305,10 +1305,14 @@
         
         setTimeout(()=>{
             document.getElementById("strongAuthenticationAppCode_label").innerHTML  = "{{localizationObj.strongAuthenticationAppCode_label}}";
+            console.log(document.getElementById("strongAuthenticationAppCode_label").innerHTML)
             document.getElementById("strongAuthenticationAppCode").placeholder = "{{localizationObj.strongAuthenticationAppCode}}";
+            console.log(document.getElementById("strongAuthenticationAppCode").placeholder)
             document.getElementById('#continue').innerHTML = "{{localizationObj.continue}}";
+            console.log( document.getElementById('#continue').innerHTML)
             document.getElementById("claimVerificationServerError").innerHTML = "{{localizationObj.claimVerificationServerError}}";
-            document.getElementsByClassName("itemLevel")[0].innerHTML= "{{localizationObj.itemLevel}}";
+            console.log(document.getElementById("claimVerificationServerError").innerHTML)
+            // document.getElementsByClassName("itemLevel")[0].innerHTML= "{{localizationObj.itemLevel}}";
             changeLanguageOnClick(currentLang);
         },1500);
 
