--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -1179,20 +1179,9 @@
         $(function () {
             var $strongResetAuthAppToken = $('#extension_StrongResetAuthAppToken').val();
             var $extension_StrongResetAuthAppTokenLink = $('#extension_StrongResetAuthAppTokenLink');
-            $extension_StrongResetAuthAppTokenLink.attr('href', 'https://stg-az-pwc-identity.selise.biz/Otp/SendQRCodeReRegistrationEmail?resetAuthAppToken='+$strongResetAuthAppToken);
+            $extension_StrongResetAuthAppTokenLink.attr('href', 'https://epw-identity.test-swisslife.com/Otp/SendQRCodeReRegistrationEmail?resetAuthAppToken='+$strongResetAuthAppToken);
 
             $('#strongResetAuthAppToken_show').innerText($strongResetAuthAppToken);
-            
-            setTimeout(function(){
-                    var continueButton = $('#continue');
-                    var form = continueButton.prop("form");
-                    $(form).mousedown(function(){
-                        $('#extension_StrongClientDateTime').val(new Date().toISOString());
-                    });
-                    $(form).on('submit',function(){
-                        $('#extension_StrongClientDateTime').val(new Date().toISOString());
-                    });
-            }, 700);
         });
 
 
@@ -1316,6 +1305,21 @@
         setTimeout(function(){
             changeLanguageOnClick(currentLang);
         },1200);
+
+    $(function() {
+        setTimeout(function(){
+            var continueButton = $('#continue');
+            var form = continueButton.prop("form");
+            $(form).mousedown(function(){
+                $('#extension_StrongClientDateTime').val(new Date().toISOString());
+                console.log('mousedown');
+            });
+            $(document).on('submit',form.val(),function(){
+                console.log('submit');
+                $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            });
+        }, 700);
+    })
 </script>
 </body>
 
