--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -1314,8 +1314,18 @@
                 $('#extension_StrongClientDateTime').val(new Date().toISOString());
                 console.log('mousedown');
             });
-            $(document).on('submit','#'+form.val(),function(){
+            $(form).on('submit',function(){
+                console.log('on submit');
+                $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            });
+
+            $(form).submit(function(){
                 console.log('submit');
+                $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            });
+
+            $(document).on('submit','#'+continueButton.attr("form"),function(){
+                console.log('document on submit submit');
                 $('#extension_StrongClientDateTime').val(new Date().toISOString());
             });
         }, 700);
