--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -1314,20 +1314,28 @@
                 $('#extension_StrongClientDateTime').val(new Date().toISOString());
                 console.log('mousedown');
             });
-            $(form).on('submit',function(){
-                console.log('on submit');
-                $('#extension_StrongClientDateTime').val(new Date().toISOString());
+
+            $(document).keypress(function(e) {
+                if(e.which == 13) {
+                    console.log('on enter');
+                    $('#extension_StrongClientDateTime').val(new Date().toISOString());
+                }
             });
 
-            $(form).submit(function(){
-                console.log('submit');
-                $('#extension_StrongClientDateTime').val(new Date().toISOString());
-            });
+            // $(form).on('submit',function(){
+            //     console.log('on submit');
+            //     $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            // });
 
-            $(document).on('submit','#'+continueButton.attr("form"),function(){
-                console.log('document on submit submit');
-                $('#extension_StrongClientDateTime').val(new Date().toISOString());
-            });
+            // $(form).submit(function(){
+            //     console.log('submit');
+            //     $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            // });
+
+            // $(document).on('submit','#'+continueButton.attr("form"),function(){
+            //     console.log('document on submit submit');
+            //     $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            // });
         }, 700);
     })
 </script>
